# notchkeep

./: .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  RELEASING.md  SECURITY.md  THIRD_PARTY_LICENSES.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  pentest.yml  release.yml  sbom.yml  security.yml  static.yml  test.yml
.semgrep/: rules.yml
e2e/: guideline-visual.spec.ts  inline-institution.spec.ts  tauri-mock.ts  undo-flow.spec.ts  update-dialogs.spec.ts
scripts/: append-js-licenses.mjs  audit-capabilities.mjs  check-secrets-committed.sh  check-update-endpoint.mjs  check-versions.mjs  ci-report.mjs  gen-android-manifest.mjs  scan-logs-pii.mjs  scan-pii.sh  verify.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  about.hbs  about.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_seed_investitionen_category.sql  0003_buckets_envelope.sql  0004_soft_delete.sql  0005_trash_transactions.sql
src-tauri/plugins/apk-updater/: .gitignore  Cargo.toml  build.rs
src-tauri/plugins/apk-updater/android/: build.gradle.kts
src-tauri/plugins/apk-updater/android/src/main/java/app/tauri/apkupdater/: ApkUpdaterPlugin.kt
src-tauri/plugins/apk-updater/permissions/: check.toml  default.toml  download-and-install.toml
src-tauri/plugins/apk-updater/permissions/autogenerated/: reference.md
src-tauri/plugins/apk-updater/permissions/schemas/: schema.json
src-tauri/plugins/apk-updater/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  verify.rs
src-tauri/src/: app_config.rs  device.rs  import_flow.rs  lib.rs  main.rs  model.rs
src-tauri/src/categorization/: flow.rs  fuzzy.rs  mod.rs  rules.rs
src-tauri/src/commands/: accounts.rs  admin.rs  aggregates.rs  breakdowns.rs  bucket_allocations.rs  bucket_rules.rs  buckets.rs  budgets.rs  categories.rs  export.rs  fx.rs  goals.rs  import.rs  institutions.rs  mod.rs  portfolio.rs  prices.rs  recurring.rs  rules.rs  securities.rs  trades.rs  transactions.rs  updater.rs
src-tauri/src/db/: accounts.rs  admin.rs  aggregates.rs  breakdowns.rs  bucket_allocations.rs  bucket_rules.rs  buckets.rs  budgets.rs  export.rs  fx.rs  goals.rs  institutions.rs  integrity.rs  lock.rs  mod.rs  networth.rs  portfolio.rs  prices.rs  recurring.rs  rules.rs  securities.rs  trades.rs  transactions.rs
src-tauri/src/importers/: csv_bank_statement.rs  flatex_pdf.rs  mod.rs  sparkasse_csv.rs  trade_republic_csv.rs
src-tauri/src/pricing_provider/: mock.rs  mod.rs  yahoo.rs
src/lib/: api.test.ts  api.ts  breakpoints.ts  format.test.ts  format.ts  mockData.ts  nav-config.ts  platform.ts  settings.svelte.test.ts  settings.svelte.ts  smoke.test.ts  snackbar.svelte.ts  system-accent.test.ts  system-accent.ts  tx-grouping.test.ts  tx-grouping.ts
src/lib/actions/: focusTrap.ts  ripple.ts
src/lib/components/: AccountCreateModal.svelte  AccountEditModal.svelte  AccountSettingsForm.svelte  AccountTreeItem.svelte  AddCurrencyModal.svelte  AllocateDialog.svelte  AllocationDonut.svelte  BottomTabBar.svelte  BreakdownEditor.svelte  BucketCard.svelte  BucketModal.svelte  BudgetYearOverview.svelte  CashflowChart.svelte  CategoriesModal.svelte  ChannelWarningDialog.svelte  DateField.svelte  DepotTxModal.svelte  DetectSuggestionsModal.svelte  DividendHistoryList.svelte  Donut.svelte  EmptyState.svelte  ExportButton.svelte  Fab.svelte  GoalCard.svelte  GoalModal.svelte  HoldingRow.svelte  Icon.svelte  ImportStatementsModal.svelte  InstitutionCard.svelte  InstitutionModal.svelte  KPI.svelte  KursRefreshButton.svelte  LicensesModal.svelte  MobileHeader.svelte  MoreSheet.svelte  NetWorthChart.svelte  NetWorthIndexChart.svelte  OnboardingWizard.svelte  (+32 more)
src/routes/: +layout.svelte  +page.svelte
static/: licenses.html
(+62 files in other folders)
