[package]
name = "budget-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Florian Zollner"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "budget_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
gethostname = "0.5"
csv = "1"
sha2 = "0.10"
regex = "1"
strsim = "0.11"
tauri-plugin-dialog = "2.7.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
pdf-extract = "0.7"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

