[package]
name = "tauri-plugin-apk-updater"
version = "0.1.0"
description = "APK over-the-air update plugin for Tauri Android apps."
edition = "2021"
license = "GPL-3.0-or-later"
links = "tauri-plugin-apk-updater"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
sha2 = "0.10"
minisign-verify = "0.2"
hex = "0.4"
base64 = "0.22"
futures-util = "0.3"
